--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -23,7 +23,9 @@
         android:layout_height="wrap_content"
         android:layout_toStartOf="@id/delete_box"
         tools:text="Example Item"
+        android:onClick="navigateToEditText"
         android:maxLines="1"
+        android:clickable="true"
         android:ellipsize="end"
         android:textSize="20dp"
         android:layout_marginLeft="6dp"
