--- a/app/src/main/res/layout/activity_sigunup.xml
+++ b/app/src/main/res/layout/activity_sigunup.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/bg"
+    android:background="@drawable/bgred"
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="156dp"
-        android:text="@string/sign_in"
+        android:text="@string/sign_up"
         android:textSize="30sp"
         android:textStyle="bold"
         android:textColor="@color/white"
@@ -22,31 +22,49 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <AutoCompleteTextView
-        android:id="@+id/username"
+        android:id="@+id/usernameCreate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="60dp"
         android:layout_marginRight="24dp"
         android:background="@color/white"
-        android:drawableLeft="@drawable/baseline_email_24"
+        android:drawableLeft="@drawable/baseline_person_24"
         android:drawablePadding="10dp"
         android:hint="@string/sign_in_hint"
         android:paddingVertical="13sp"
         android:paddingLeft="19dp"
-
         android:textColorHint="@color/hintcolor"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signInText" />
 
-    <EditText
-        android:id="@+id/password"
+    <AutoCompleteTextView
+        android:id="@+id/emailCreate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginRight="24dp"
+        android:background="@color/white"
+        android:drawableLeft="@drawable/baseline_email_24"
+        android:drawablePadding="10dp"
+        android:hint="@string/email_hint"
+        android:paddingVertical="13sp"
+        android:paddingLeft="19dp"
+        android:textColorHint="@color/hintcolor"
+        app:layout_constraintBottom_toTopOf="@+id/passwordCreate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toBottomOf="@+id/usernameCreate" />
+
+
+    <EditText
+        android:id="@+id/passwordCreate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="84dp"
         android:layout_marginRight="24dp"
         android:background="@color/white"
         android:drawableLeft="@drawable/baseline_lock_24"
@@ -57,57 +75,57 @@
         android:paddingVertical="13sp"
         android:paddingLeft="19dp"
         android:textColorHint="@color/hintcolor"
-        app:layout_constraintEnd_toEndOf="@+id/username"
+        app:layout_constraintEnd_toEndOf="@+id/usernameCreate"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/username"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+        app:layout_constraintStart_toStartOf="@+id/usernameCreate"
+        app:layout_constraintTop_toBottomOf="@+id/usernameCreate" />
 
     <Button
         android:id="@+id/signInButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="26dp"
-        android:layout_marginTop="44dp"
-        android:onClick="onSignIn"
+        android:layout_marginTop="72dp"
         android:background="@color/custompurple"
+        android:onClick="onSignUp"
         android:padding="6dp"
         android:paddingHorizontal="39dp"
-        android:text="@string/text_button"
+        android:text="@string/text_button_sign_up"
         android:textSize="16sp"
         android:textStyle="bold"
         app:constraint_referenced_tags="@string/sign_in"
         app:cornerRadius="66sp"
         app:layout_constraintEnd_toEndOf="parent"
 
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordCreate" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="120dp"
-        android:text="@string/dont_have_an_account"
+        android:text="@string/already_have_an_account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signInButton"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/createAccountPrompt"
+        android:id="@+id/signInAccountPrompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/create_account_button"
+        android:layout_marginTop="12dp"
         android:clickable="true"
-        android:onClick="onSignUp"
+        android:text="@string/signin_account_button"
         android:textColor="#2196F3"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView5"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 
