Internationalised app completed

--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -19,11 +19,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
-            android:layout_marginLeft="0dp"
             android:layout_marginTop="196dp"
-            android:drawableLeft="@drawable/baseline_title_24"
-            android:hint="Title"
             android:background="@color/white"
+            android:drawableLeft="@drawable/baseline_title_24"
+            android:hint="@string/title_hint"
             android:padding="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +36,7 @@
             android:layout_marginTop="28dp"
             android:background="@color/white"
             android:drawableLeft="@drawable/baseline_description_24"
-            android:hint="description"
+            android:hint="@string/hint_description"
             android:padding="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,17 +48,17 @@
             android:id="@+id/dueDateEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/baseline_date_range_24"
             android:layout_marginHorizontal="32dp"
-            android:ems="10"
+            android:background="@color/white"
+            android:drawableLeft="@drawable/baseline_date_range_24"
 
+            android:ems="10"
+            android:hint="@string/hint_due_date"
+            android:inputType="date"
+            android:padding="12dp"
             android:shadowColor="@color/white"
             android:shadowRadius="@integer/material_motion_duration_long_2"
-            android:hint="Due date (yyyy.MM.dd)"
             android:textColor="@color/black"
-            android:background="@color/white"
-            android:padding="12dp"
-            android:inputType="date"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="72dp"
-            android:text="Edit todo item"
+            android:text="@string/title_edit_todo"
             android:textColor="@color/white"
             android:textSize="30sp"
             android:textStyle="bold"
